# visprompt-agent

./: .gitignore  README.md  VisPromptAgent_Experiment_Plan.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/tasks/: classification.yaml  detection.yaml  segmentation.yaml
scripts/: compare_2025_methods.py  debug_detection.py  extract_llm_comparison.py  generate_figures.py  plot_figures.py  run.py  run_action_ablation.py  run_action_perclass.py  run_action_recognition.py  run_applied_domains.py  run_baselines.py  run_coco_retrieval.py  run_critic_ablation.py  run_cross_ablation.py  run_desc_scaling.py  run_detection_baselines.py  run_fewshot_comparison.py  run_imagenet.py  run_multidataset.py  run_protext_baseline.py  run_retrieval_baselines.py  run_robustness.py  run_seg_baselines.py  run_theory_verification.py  run_timing.py  run_tlac_baseline.py  run_unsupervised_weight.py  run_variance.py  run_video_benchmarks.py  run_weight_ablation.py
visprompt/: __init__.py  pipeline.py  task_spec.py
visprompt/_experimental/: run_ablation.py  run_agent_ablation.py
visprompt/_experimental/agents/: planner.py  strategist.py
visprompt/agents/: __init__.py  analyst.py  base.py  critic.py  executor.py  planner.py
visprompt/baselines/: __init__.py
visprompt/models/: __init__.py
visprompt/tasks/: __init__.py  base.py  classification.py  detection.py  detection_owlvit.py  segmentation.py  segmentation_clipseg.py
visprompt/tests/: __init__.py
visprompt/utils/: __init__.py  llm.py  metrics.py
